added prisma and database using mysql

--- a/.env.notes
+++ b/.env.notes
@@ -4,11 +4,27 @@ npx create-next-app@latest ./ --typescript --tailwind --eslint
 # Second step
 npx shadcn-ui@latest init
 
-#####################
-
 # == Clerk website == 
 1. npm install @clerk/nextjs
 
+# == for button component ==
+1. npx shadcn-ui@latest add button
+
+# == for prisma ==
+1. npm install -D prisma
+2. npx prisma init
+3. npm i @prisma/client
+4. npx prisma generate --> add all the models to the database
+5. npx prisma db push --> push the schema through the database_url
+6. npx prisma studio --> checking the data inside the studio
+
+# If we adjust something inside the prisma
+1. npx prisma generate --> will update the schema
+2. npx prisma db push --> push the new database through database_url
+#############################################
+
+# dummy data and prisma connection
+1. node scripts/seed.ts --> to send the dummy data to prisma studio
 
 
 
@@ -20,9 +36,14 @@ npx shadcn-ui@latest init
 
 
 
+
+
+# ========= WEBSITE LINKS BELOW with its purposes ========= #
 
 # Useful resources
 1. https://ui.shadcn.com/docs/installation/next --> creating new projects
 2. https://nextjs.org/docs/app/building-your-application/routing/route-groups --> for creating different layout in every page
 3. https://clerk.com/ --> for creating login and signup forms
-
+4. https://lucide.dev/icons/ --> for icons
+5. https://clerk.com/docs/references/react/use-auth#use-auth --> if error occurs for using useAuth()
+6. https://aiven.io/ --> for choosing a database 
