--- a/.env.notes
+++ b/.env.notes
@@ -18,13 +18,41 @@ npx shadcn-ui@latest init
 5. npx prisma db push --> push the schema through the database_url
 6. npx prisma studio --> checking the data inside the studio
 
-# If we adjust something inside the prisma
+# If we adjust something inside the prisma (don't forget to stop the website on terminal)
 1. npx prisma generate --> will update the schema
 2. npx prisma db push --> push the new database through database_url
 #############################################
 
-# dummy data and prisma connection
+# == dummy data and prisma connection == #
 1. node scripts/seed.ts --> to send the dummy data to prisma studio
+
+# == Hook form component == #
+1. npx shadcn-ui@latest add form 
+
+# == Input component == #
+1. npx shadcn-ui@latest add input
+
+# == Combobox component == #
+1. npx shadcn-ui@latest add popover
+2. npx shadcn-ui@latest add command
+
+# == CMDK downgrading for the ComboBox to remove error==
+1. npm install cmdk@0.2.1
+
+# == axios for api requests to the backend ==
+1. npm i axios
+
+# == React Quill == 
+1. npm install react-quill --save
+
+# == react-hot-toast ==
+1. npm i react-hot-toast
+
+# == Uploadthing website ==
+1. npm install uploadthing @uploadthing/react
+
+
+
 
 
 
@@ -47,3 +75,5 @@ npx shadcn-ui@latest init
 4. https://lucide.dev/icons/ --> for icons
 5. https://clerk.com/docs/references/react/use-auth#use-auth --> if error occurs for using useAuth()
 6. https://aiven.io/ --> for choosing a database 
+7. https://ui.shadcn.com/docs/components/form --> React Hook Form
+8. https://uploadthing.com/ --> to upload images/videos/files
