added the curriculum form and completed the drag and drop component for all sections

--- a/.env.notes
+++ b/.env.notes
@@ -51,6 +51,9 @@ npx shadcn-ui@latest init
 # == Uploadthing website ==
 1. npm install uploadthing @uploadthing/react
 
+# == For drag and drop
+1. npm i @hello-pangea/dnd
+
 
 
 
