Resource form and its api implemented

--- a/.env.notes
+++ b/.env.notes
@@ -23,20 +23,20 @@ npx shadcn-ui@latest init
 2. npx prisma db push --> push the new database through database_url
 #############################################
 
-# == dummy data and prisma connection == #
+# == dummy data and prisma connection == 
 1. node scripts/seed.ts --> to send the dummy data to prisma studio
 
-# == Hook form component == #
+# == Hook form component == 
 1. npx shadcn-ui@latest add form 
 
-# == Input component == #
+# == Input component == 
 1. npx shadcn-ui@latest add input
 
-# == Combobox component == #
+# == Combobox component == 
 1. npx shadcn-ui@latest add popover
 2. npx shadcn-ui@latest add command
 
-# == CMDK downgrading for the ComboBox to remove error==
+# == CMDK downgrading for the ComboBox to remove error ==
 1. npm install cmdk@0.2.1
 
 # == axios for api requests to the backend ==
@@ -51,8 +51,12 @@ npx shadcn-ui@latest init
 # == Uploadthing website ==
 1. npm install uploadthing @uploadthing/react
 
-# == For drag and drop
+# == For drag and drop ==
 1. npm i @hello-pangea/dnd
+
+# == switch component ==
+1. npx shadcn-ui@latest add switch
+
 
 
 
