--- a/.env.notes
+++ b/.env.notes
@@ -57,6 +57,14 @@ npx shadcn-ui@latest init
 # == switch component ==
 1. npx shadcn-ui@latest add switch
 
+# == Mux Video ==
+1. npm i @mux/mux-node
+2. npm i @mux/mux-player-react
+
+# == Alert dialog component ==
+1. npx shadcn-ui@latest add alert-dialog
+
+
 
 
 
@@ -84,3 +92,4 @@ npx shadcn-ui@latest init
 6. https://aiven.io/ --> for choosing a database 
 7. https://ui.shadcn.com/docs/components/form --> React Hook Form
 8. https://uploadthing.com/ --> to upload images/videos/files
+9. https://www.mux.com/ -- > To display and run the video on the client side. 
