--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@clerk/nextjs": "^5.1.4",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.6.0",
+    "@mux/mux-node": "^8.7.1",
+    "@mux/mux-player-react": "^2.7.0",
     "@prisma/client": "^5.15.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
