--- a/.env.notes
+++ b/.env.notes
@@ -64,6 +64,10 @@ npx shadcn-ui@latest init
 # == Alert dialog component ==
 1. npx shadcn-ui@latest add alert-dialog
 
+# == Alert component ==
+1. npx shadcn-ui@latest add alert
+
+
 
 
 
