Data table added

--- a/.env.notes
+++ b/.env.notes
@@ -67,6 +67,16 @@ npx shadcn-ui@latest init
 # == Alert component ==
 1. npx shadcn-ui@latest add alert
 
+# == Datga table component ==
+1. npx shadcn-ui@latest add table
+2. npm install @tanstack/react-table
+
+# == Badge component ==
+1. npx shadcn-ui@latest add badge
+
+
+
+
 
 
 
