--- a/.env.notes
+++ b/.env.notes
@@ -67,7 +67,7 @@ npx shadcn-ui@latest init
 # == Alert component ==
 1. npx shadcn-ui@latest add alert
 
-# == Datga table component ==
+# == Data table component ==
 1. npx shadcn-ui@latest add table
 2. npm install @tanstack/react-table
 
