showing the available course in the main page and implemented a search function to find a specific course, and created the overview page of the course as well

--- a/.env.notes
+++ b/.env.notes
@@ -74,6 +74,9 @@ npx shadcn-ui@latest init
 # == Badge component ==
 1. npx shadcn-ui@latest add badge
 
+#== Stripe ==
+1. npm i stripe
+
 
 
 
@@ -107,3 +110,6 @@ npx shadcn-ui@latest init
 7. https://ui.shadcn.com/docs/components/form --> React Hook Form
 8. https://uploadthing.com/ --> to upload images/videos/files
 9. https://www.mux.com/ -- > To display and run the video on the client side. 
+
+10. https://clerk.com/docs/references/nextjs/current-user --> for currentUser()
+11 https://clerk.com/docs/reference/backend-api/tag/Users#operation/GetUser --> retrieve the current user
