--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-toast": "^0.0.3",
     "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
+    "stripe": "^15.11.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.12.0",
