stripe payment completed

--- a/.env.notes
+++ b/.env.notes
@@ -77,6 +77,19 @@ npx shadcn-ui@latest init
 #== Stripe ==
 1. npm i stripe
 
+# == TO USE WEBHOOKS for payment ==
+1. In stripe go to > Developers > Webhooks > Add endpoint
+
+# to Download the ZIP FILE 
+1. Download the latest windows zip file from GitHub.
+2. Unzip the stripe_X.X.X_windows_x86_64.zip file.
+3. Add the path to the unzipped stripe.exe file to your Path environment variable.
+
+4. On Command promp terminal > stripe login > press "enter"
+5. stripe listen --forward-to localhost:4242/webhook > copy the STRIPE_WEBHOOK_SECRET key
+6. Copy and paste the key to STRIPE_WEBHOOK_SECRET variable in .env file.
+#==============================================
+
 
 
 
