section details page and learning progress bar successfully created

--- a/.env.notes
+++ b/.env.notes
@@ -85,11 +85,15 @@ npx shadcn-ui@latest init
 2. Unzip the stripe_X.X.X_windows_x86_64.zip file.
 3. Add the path to the unzipped stripe.exe file to your Path environment variable.
 
-4. On Command promp terminal > stripe login > press "enter"
-5. stripe listen --forward-to localhost:4242/webhook > copy the STRIPE_WEBHOOK_SECRET key
-6. Copy and paste the key to STRIPE_WEBHOOK_SECRET variable in .env file.
+4. On Command prompt terminal type > stripe login > press "enter"
+5. A new page from stripe will appear, click >  "Allow access"
+6. On Command prompt terminal type > stripe listen --forward-to localhost:4242/webhook > copy the STRIPE_WEBHOOK_SECRET key
+7. Copy and paste the key to STRIPE_WEBHOOK_SECRET variable in .env file.
 #==============================================
 
+
+# == Progress component == 
+1. npx shadcn-ui@latest add progress
 
 
 
