Dashboard and side menu for small devices as well as responsive pages are implemented

--- a/.env.notes
+++ b/.env.notes
@@ -91,9 +91,21 @@ npx shadcn-ui@latest init
 7. Copy and paste the key to STRIPE_WEBHOOK_SECRET variable in .env file.
 #==============================================
 
-
 # == Progress component == 
 1. npx shadcn-ui@latest add progress
+
+# == Card component ==
+1. npx shadcn-ui@latest add card
+
+# == Recharts ==
+1. npm install recharts
+
+# == sheet ==
+1. npx shadcn-ui@latest add sheet
+
+
+
+
 
 
 
@@ -127,6 +139,6 @@ npx shadcn-ui@latest init
 7. https://ui.shadcn.com/docs/components/form --> React Hook Form
 8. https://uploadthing.com/ --> to upload images/videos/files
 9. https://www.mux.com/ -- > To display and run the video on the client side. 
-
 10. https://clerk.com/docs/references/nextjs/current-user --> for currentUser()
 11 https://clerk.com/docs/reference/backend-api/tag/Users#operation/GetUser --> retrieve the current user
+12. https://recharts.org/en-US/guide --> to install recharts
