--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -62,8 +62,8 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-      # - name: Build code
-      #   run: npm run build
+      - name: Build code
+        run: npm run build
       - name: cache dependencies
         id: cache
         uses: actions/cache@v3
