added a new icon.ico and deleted some unnecessary files

--- a/.env.notes
+++ b/.env.notes
@@ -103,6 +103,9 @@ npx shadcn-ui@latest init
 # == sheet ==
 1. npx shadcn-ui@latest add sheet
 
+# == lucide react ==
+1. npm install lucide-react
+
 
 
 
