--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
     "lucide-react": "^0.394.0",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -39,6 +40,7 @@
     "react-quill": "^2.0.0",
     "recharts": "^2.12.7",
     "stripe": "^15.11.0",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.12.0",
