--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.394.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
+    "next-video": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
